# wynnes-strava-activities

./: .gitignore  README.md  charts.py  main.py  notebook.ipynb  plugins.py  pyproject.toml  statistics.py  strava_wynne_activities.py  top_five.py  turkey_trot.csv
Notebooks/: Wynne-Run-Analysis.ipynb  duckdb-init.ipynb  duckdb-insert.ipynb
etl_scripts/: init_duckdb_database.py  strava_daily_insert.py
static/css/: style.css
templates/: behind-the-design.html  index.html  layout.html  wynne-activities-chart.html  wynne-activities.html
