[project]
name = "data-science-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "geopy>=2.4.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.9.4",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "uvicorn>=0.39.0",
]
