[project]
name = "data-science-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.4.4",
    "fastapi>=0.128.8",
    "geopy>=2.4.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.9.4",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "psycopg[binary]>=3.2.13",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.39.0",
    "ipykernel>=6.31.0",
]
